--- a/trunk/TODO
+++ b/trunk/TODO
@@ -31,11 +31,11 @@
                 (because of stipulated user text input from this skeleton)
 
 *  15.0.1:
-** TODO Tasks [16%]
+** TODO Tasks [20%]
    - [ ] add aux15 commands to the fontification and help stuff, kpt,
      lcurv, etc. (ANF functions)
    - [ ] make an ansys-solver-mode for highlighting BEGIN:, POST12:, etc.
-   - [ ] create a face for arg1-19 and _RETURN like the diary face (somewhat milder red)
+   - [X] create a face for arg1-19 and _RETURN like the diary face (somewhat milder red)
    - [ ] document fontification.mac or make an org file from it as soon as
      the output becomes coloured, better merge it with APDL_tutorial.org
    - [ ] call the ANSYS help browser with APDL command?
