--- a/README
+++ b/README
@@ -396,7 +396,7 @@ Then in mainly reversed cronological order:
 * A competitor of ANSYS-Mode: The [http://www.padtinc.com/pedal  Pedal]
 script editor
 * [http://www.auc-ev.de/ AUC], the ANSYS User Club in Germany
-* Another APDL [http://apdl.de editor] and some APDL macros
+* Another APDL [http://apdl.de editor], but the site seems to be abandoned
 
 == Bugs and Problems ==
 
